Part4/Exercise_4.01/manifests/pinglog_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pinglog-namespace
  labels:
    name: pinglog-namespace
