Part4/Exercise_4.01/manifests/shared_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-pingpong-ingress
  namespace: pinglog-namespace
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 3032
      - path: /logreader
        pathType: Prefix
        backend:
          service:
            name: log-reader-service
            port:
              number: 3021
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-service
            port:
              number: 3010
